# TestApp

./: .gitignore  App.tsx  MyModule.tsx  README.md  android_build_and_copy.sh  package.json  testapp.podspec
android/app/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/app/src/main/java/com/testapp/: JsiModuleModule.java  JsiModulePackage.java  MainActivity.java  MainApplication.java
cpp/: react-native-jsi-module.cpp  react-native-jsi-module.h
ios/: JsiModule.mm
ios/TestApp.xcodeproj/: project.pbxproj
ios/librust_lib.xcframework/: Info.plist
rust/: Cargo.toml  rust-toolchain
rust/.cargo/: config.toml
rust/src/: lib.rs
